@@ -22,8 +22,8 @@ Using the Google Chart Tools with R
 \tabular{ll}{
 	Package: \tab googleVis\cr
 	Type: \tab Package\cr
-	Version: \tab 0.3.2\cr
-	Date: \tab 2012-10-28\cr
+	Version: \tab 0.3.3\cr
+	Date: \tab 2012-10-31\cr
 	License: \tab GPL version 2 or later\cr
 	 }
 	}
