@@ -207,7 +207,7 @@
 	title = {google{V}is: Using the {G}oogle {C}hart {T}ools with {R}},
 	author = {Markus Gesmann and Diego de Castillo},
 	year = {2012},
-	note ={R package version 0.3.2},
+	note ={R package version 0.3.3},
 	Howpublished = {\url{http://code.google.com/p/google-motion-charts-with-r/}}
 }
 
